--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
